# ICPy

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README  README.md  data.json  genindex.html  icpy.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml  coverage.yml  doc.yml  python-app.yml
_modules/: index.html
_modules/icpy/: ICP.html
_sources/: icpy.rst.txt  modules.rst.txt
docs/: conf.py  index.rst
htmlcov/: d_a44f0ac069e85531_test_ICP_py.html  index.html  status.json
icpy/: ICP.py
icpy/tests/: test_ICP.py
pertInv/: ICP.py  __init__.py  simulation.py
pertInv/tests/: test_ICP.py  test_simulation.py
src/icpy/: ICP.py
tests/: test_ICP.py
