[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ICPy"
version = "0.0.005"
description = 'Invariant Causal Prediction for python'
readme = "README.md"
requires-python = '>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*'
license = {text = 'MIT'}
authors = [{name = 'Jan Gleixner', email = 'jan.gleixner+icpy@gmail.com'}]
maintainers = [{name = 'Jan Gleixner', email = 'jan.gleixner+icpy@gmail.com'}]
keywords = ['statistics', 'casual-inference']
classifiers = [
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 2',
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.4',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
      ]
urls = {source = 'https://github.com/jan-glx/ICPy'}
dependencies = ['numpy', 'scipy', 'scikit-learn',]

[tool.setuptools]
zip-safe = false

[tool.pytest.ini_options]
addopts = ''' 
    --cov-report term-missing --cov-branch --cov-report xml --cov-report term
    --cov -vv --strict-markers -rfE
'''

[tool.coverage.run]
relative_files = true

